@@ -1,3 +1,8 @@
+2003-02-08  Yoichi NAKAYAMA  <yoichi@eken.phys.nagoya-u.ac.jp>
+
+	* mime-view.el (mime-save-situation-examples): Bind print-length
+	and print-level.
+
 2002-11-05  Yoichi NAKAYAMA  <yoichi@eken.phys.nagoya-u.ac.jp>
 
 	* mime-view.el (mime-preview-find-boundary-info): Change the name of
